# ActiveWindowTracker

./: .gitignore  README.md  release_files.sh
BrowserExtension/: local_tracker_server.py  manifest.json  popup.html  popup.js
ProcessTracker/: LICENSE  gui  run_tracker_shit.sh  tracker  tracker.db
Tracker/: Cargo.toml  build.rs
Tracker/src/: dbSchema.sql  main.rs
Tracker/src/DB/: access.rs
Tracker/src/DB_debug/: access.rs
Tracker/src/GUI/: mod.rs
Tracker/src/Tracker/: db_access.rs  db_stuff.rs  mod.rs
TrackerGUI/: CMakeLists.txt  Makefile  TrackerGUI.pro  dbaccess.cpp  dbaccess.h  gui  main.cpp  qrc_systray.cpp  systray.qrc  tracker.db  traywindow.cpp  traywindow.h  traywindow.ui  ui_traywindow.h
